@@ -153,9 +153,8 @@ Infinity = dInfinity
 # Lookup table for geom objects: C ptr -> Python object
 
 ## This causes some kind of weird bug! Need to fix this.
-#import weakref
-#_geom_c2py_lut = weakref.WeakValueDictionary()
-_geom_c2py_lut = {}
+import weakref
+_geom_c2py_lut = weakref.WeakValueDictionary()
 
 # Mass 
 include "mass.pyx"
